# rd107-firmware

./: CMakeLists.txt  Makefile  README.me  partitions.csv  sdkconfig.defaults
front/: end.html  front.css  head.html
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  component.mk
main/inc/: SPI_LCD.h  Waveshare_ILI9486.h  buzzer_handler.h  card_handler.h  connect.h  data_handler.h  definitions.h  fonts.h  fs_handler.h  handler_buzzer.h  handler_data.h  handler_files.h  handler_parse.h  handler_reader.h  handler_relay.h  handler_rgb.h  handler_screen.h  handler_search.h  handler_sntp.h  handler_spi.h  handler_touch.h  handler_web.h  handler_wiegand.h  handler_wifi.h  parse_handler.h  qrcodegen.h  rgb_handler.h  tft_handler.h  touch_handler.h  wiegand_handler.h
main/src/: SPI_LCD.c  Waveshare_ILI9486.c  buzzer_handler.c  card_handler.c  connect.c  data_handler.c  fs_handler.c  handler_buzzer.c  handler_card.c  handler_data.c  handler_files.c  handler_parse.c  handler_reader.c  handler_relay.c  handler_rgb.c  handler_screen.c  handler_search.c  handler_sntp.c  handler_spi.c  handler_touch.c  handler_web.c  handler_wiegand.c  handler_wifi.c  parse_handler.c  qrcodegen.c  rgb_handler.c  tft_handler.c  touch_handler.c  wiegand_handler.c
main/src/Fonts/: font12.c  font16.c  font20.c  font24.c  font8.c  logo.c
tools/: button.c  check.c  circle.c  convert_png2hex.py  cross.c
