idf_component_register(SRCS
                    "app_main.c" 
                    "src/connect.c"
                    "src/handler_data.c"
                    "src/handler_card.c"
                    "src/handler_files.c"
                    "src/handler_parse.c"
                    "src/handler_rgb.c"
                    "src/handler_wiegand.c"
                    "src/handler_buzzer.c"
                    "src/handler_relay.c"
                    "src/handler_screen.c"
                    "src/handler_touch.c"
                    "src/qrcodegen.c"
                    "src/SPI_LCD.c"
                    "src/Fonts/font8.c"
                    "src/Fonts/font12.c"
                    "src/Fonts/font16.c"
                    "src/Fonts/font20.c"
                    "src/Fonts/font24.c"
                    "src/Waveshare_ILI9486.c"
                    INCLUDE_DIRS "inc")
